# yad

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.claude/rules/: architecture-rules.md  db-rules.md  rust-rules.md  testing-rules.md  ui-rules.md
docs/: yad-prd-v3.md
src/: App.test.tsx  App.tsx  globals.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: system.rs
src-tauri/src/db/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/volume/: mod.rs
src/components/content/: content-area.tsx
src/components/inspector/: inspector-panel.tsx
src/components/sidebar/: app-sidebar.tsx
src/hooks/: use-tauri.ts
src/i18n/: index.ts  tr.ts
src/stores/: app-store.ts
src/types/: index.ts  supabase.ts
